renamed:    falcon9.html -> about_us.html 	modified:   css/style.css 	deleted:    falcon-heavy.html 	new file:   img/HDPE-pipe.png 	new file:   img/IMG-20230622-WA0020.jpg 	new file:   img/black-pipes.jpg 	new file:   img/elecrical-breakers-2.jpg 	new file:   img/elecrical-breakers.jpg 	new file:   img/electrical.jpg 	new file:   img/fittings.jpg 	new file:   img/geo-fitting.jpg 	new file:   img/geo-membrane.jpg 	new file:   img/geomembranes.jpg 	new file:   img/harness.jpg 	new file:   img/hdpe-fittings.jpg 	new file:   img/hdpe-pipe-demo.jpg 	new file:   img/helmet.jpg 	new file:   img/helmets.jpg 	new file:   img/industry-a.jpg 	new file:   img/industry_pipes.jpg 	modified:   img/logo.png 	new file:   img/markus-spiske-kK7uPfb2YWU-unsplash.jpg 	new file:   img/pexels-flo-dnd-1928760.jpg 	new file:   img/pexels-kateryna-babaieva-2760241.jpg 	new file:   img/pipe-guages.jpg 	new file:   img/pipes-guages.jpg 	new file:   img/pvc-geomembrane-500x500.webp 	new file:   img/safety.jpg 	new file:   img/steel-structure.jpg 	new file:   img/yellow-pvc.jpg 	modified:   index.html 	new file:   plastics.html 	renamed:    dragon.html -> products.html

--- a/index.html
+++ b/index.html
@@ -6,27 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
-    <title>SpaceX</title>
+    <title>Saan Solid Plastics</title>
   </head>
   <body>
     <div id="overlay"></div>
     <div id="mobile-menu" class="mobile-main-menu">
       <ul>
-        <li><a href="#">Mission</a></li>
-        <li><a href="#">Launches</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Updates</a></li>
-        <li><a href="#">Shop</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contact Us</a></li>
 
-        <li class="mobile-only"><a href="falcon9.html">Falcon 9</a></li>
-        <li class="mobile-only">
-          <a href="falcon-heavy.html">Falcon Heavy</a>
-        </li>
-        <li class="mobile-only"><a href="dragon.html">Dragon</a></li>
-        <li class="mobile-only"><a href="#">Starship</a></li>
-        <li class="mobile-only"><a href="#">Human Spaceflight</a></li>
-        <li class="mobile-only"><a href="#">Rideshare</a></li>
-        <li class="mobile-only"><a href="#">Starlink</a></li>
+        <li class="mobile-only"><a href="index.html">Home</a></li>
+        <li class="mobile-only"><a href="products.html">Products</a></li>
+        <li class="mobile-only"><a href="contact.html">Contact Us</a></li>
       </ul>
     </div>
     <header class="main-header">
@@ -37,14 +29,9 @@
       </div>
       <nav class="desktop-main-menu">
         <ul>
-          <li><a href="falcon9.html">Falcon 9</a></li>
-          <li><a href="falcon-heavy.html">Falcon Heavy</a></li>
-          <li><a href="dragon.html">Dragon</a></li>
-          <li><a href="#">Starship</a></li>
-          <li><a href="#">Human Spaceflight</a></li>
-          <li><a href="#">Rideshare</a></li>
-          <li><a href="#">Starlink</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -59,8 +46,8 @@
     <!-- Section A -->
     <section class="section-a">
       <div class="section-inner">
-        <h4>Upcoming Launch</h4>
-        <h2>CRS-25 Mission</h2>
+        <h4>Mining and Industrial Supliers and Contractors</h4>
+        <h2>SAAN SOLID PLASTIC</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
           <span>Rewatch</span>
@@ -82,8 +69,8 @@
     <!-- Section B -->
     <section class="section-b">
       <div class="section-inner">
-        <h4>Recent Launch</h4>
-        <h2>Starlink Mission</h2>
+        <h4>We Supply and Install Quality</h4>
+        <h2>HPPE Pipes</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
           <span>Rewatch</span>
@@ -105,11 +92,15 @@
     <!-- Section C -->
     <section class="section-c">
       <div class="section-inner">
-        <h4>Recent Mission</h4>
-        <h2>SES-22 Mission</h2>
+        <!-- <h4>Our Mission</h4> -->
+        <h4>We provide Industial Class </h4>
+        <h2>Steel Products </h2>
+        <p>
+          We have a strong reputation for quality Steel Pipes, Flanges, Roofing Sheets as well as Steel Structures.
+        </p>
         <a href="#" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>View Products</span>
         </a>
       </div>
 
@@ -128,11 +119,12 @@
     <!-- Section D -->
     <section class="section-d">
       <div class="section-inner">
-        <h4>Recent Launch</h4>
-        <h2>Globalstar FM15 Mission</h2>
+        <h4>Suppliers Of</h4>
+        <h2>Mining Supplies and Industrial PPE</h2>
+        <p>We deliver Indusrial Protective equipment and a variety of Mining Industry Supplies</p>
         <a href="#" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>Read More</span>
         </a>
       </div>
 
@@ -173,10 +165,17 @@
     <!-- Section F -->
     <section class="section-f">
       <div class="section-inner">
-        <h2>Starship to add NASA astronauts on the moon</h2>
-        <a href="#" class="btn">
+        <h4>We cannot wait to hear from you</h4>
+        <h2>Contact Us</h2>
+        <ul>
+          <li><i class="fa-whatsapp"></i> +260973705441</li>
+          <li><i class="fa-mail"> saanplastics@mail.com</i></li>
+          <li><i class="fa-phone"> +26054417855</i></li>
+          <li></li>
+        </ul>
+        <a href="contact.html" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>Contact Us</span>
         </a>
       </div>
     </section>
