--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
-    <title>SpaceX - Dragon</title>
+    <title>Saan | Steel Works</title>
   </head>
   <body>
     <div id="overlay"></div>
@@ -58,18 +58,30 @@
 
     <section class="section-animate bg-dragon"></section>
     <div class="section-inner-center">
-      <h3>Dragon</h3>
-      <p>Sending humans and cargo into space</p>
+      <h3>Steel Strutures, Stubs & Hubs</h3>
+      <p>We offer a wide variety of industrial and structural Steel Quipment for your various needs</p>
     </div>
 
     <div class="stats">
       <div>
-        <span class="counter" data-target="34">0</span>
-        <h4>Total Launches</h4>
+        <!-- <span class="counter" data-target="34">0</span> -->
+        <div class="card-image"><img src="/img/industry_pipes.jpg" alt=""></div>
+        <h4>Steel Structures</h4>
+        <ul>
+          <li>We supply and install steel Structures</li>
+          <li>Steel Scalfolds</li>
+          <li>Steel Construction</li>
+        </ul>
       </div>
       <div>
-        <span class="counter" data-target="31">0</span>
-        <h4>Visits to the ISS</h4>
+        <!-- <span class="counter" data-target="34">0</span> -->
+        <div class="card-image"><img src="/img/industry_pipes.jpg" alt=""></div>
+        <h4>Steel Pipes</h4>
+        <ul>
+          <li>We</li>
+          <li>Steel Scalfolds</li>
+          <li>Steel Construction</li>
+        </ul>
       </div>
       <div>
         <span class="counter" data-target="13">0</span>
